--- a/ajax.html
+++ b/ajax.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">gx
     <title>Document</title>
 </head>
 <body>
