--- a/ajax.html
+++ b/ajax.html
@@ -7,12 +7,12 @@
 <body>
 
 
-<script src="post.js"></script>
+<script src="getJSON.js.js"></script>
 <script>
    /* get('./custom.json',function (res){
         console.log('xxx',res);
     });*/
-    post('./custom.json',{name:'tom'},function (res){
+    getJSON('./custom.json',{name:'tom'},function (res){
         console.log('xxx',res);
     })
 </script>
